--- a/Spiel/index.html
+++ b/Spiel/index.html
@@ -12,7 +12,7 @@
     }
 </style>
 <body>
-    <h1 id="element1">Hehe :)</h1>
+    <h1 id="element1">Hehe</h1>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
 <script src="rasendestroyer.js"></script>
